# metrics-mcp

./: .gitignore  .krew.yaml  Containerfile  Makefile  README.md  go.mod  go.sum  install.sh  main.go
.github/workflows/: pull_request.yml  release.yml
cmd/: discover.go  help_promql.go  labels.go  mcp_server.go  preset.go  query.go  query_range.go  root.go
deploy/: mcp-route.yaml  mcp-server.yaml  olsconfig-patch.yaml
docs/: authentication.md  cli-usage.md  containerized.md  deployment.md  installation.md  mcp-server.md  metrics-reference.md  promql-reference.md  query-cookbook.md  similar-tools.md  vm-migration-cookbook.md
e2e/mcp/: pyproject.toml
mcp/: server.go
pkg/connection/: connection.go  connection_test.go
pkg/help/: promql.go
pkg/metrics/: discover.go  filter.go  format.go  labels.go  preset.go  query.go  query_range.go  query_range_test.go
pkg/presets/: presets.go  presets_test.go
pkg/prometheus/: client.go
pkg/selector/: selector.go  selector_test.go
pkg/table/: entry.go  format_test.go  helpers.go  matrix.go  matrix_test.go  options.go  pivot.go  table.go  vector.go
tests/: e2e_smoke.py
