[project]
name = "mcp-e2e-tests"
version = "0.1.0"
description = "End-to-end tests for kubectl-metrics MCP server"
requires-python = ">=3.10"
dependencies = [
    "pytest>=8.0",
    "pytest-asyncio>=1.0,<2",
    "pytest-order>=1.2",
    "python-dotenv>=1.0",
    "mcp>=1.24.0,<2",
    "httpx>=0.27",
]

[tool.setuptools]
packages = []

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = [
    "setup",
    "tools",
]
